functions.php has been added

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
             "Pixelese\\Bas\\": "includes/"
 
         },
-        "files" : []
+        "files" : [
+            "includes/functions.php"
+        ]
     }
 }
